--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,258 +15,186 @@
 
 @import "bootstrap";
 
-
-nav.shift ul li a {
-  position:relative;
-  z-index: 1;
-}
 nav ul li a:hover {
   color: black;
-}
-nav.shift ul li a:after {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  width: 100%;
-  height: 1px;
-  content: '.';
-  color: transparent;
   background: #FFB6DA;
-  visibility: none;
-  opacity: 0;
-  z-index: -1;
 }
-nav.shift ul li a:hover:after {
-  opacity: 1;
-  visibility: visible;
-  height: 100%;
-}
-
 
 @media (max-width: 575px) {
   .welcome {
     display:none;
   }
 
-
-
-  #contact{
-    // margin-left: 10px;
-    text-align: center;
+  .nav{
+    display: none;
   }
 
-  #work{
-    // margin-left: 10px;
-    text-align: center;
+  .logo{
+    max-width: 60%;
+    align-self: center;
+    margin-top: 50px;
   }
 
-  #projects{
-    // margin-left: 10px;
-    text-align: center;
+  .info {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+
+  .projects-header{
+    margin-top: 20px;
+  }
+
+  .work-header{
+    margin-top: 20px;
+  }
+
+  .contact-header{
+    margin-top: 20px;
   }
 
   #accordion{
     text-align: center;
   }
 
-  .nav-link{
-    padding:0;
-    margin-right:5px;
-    margin-left: 1px;
-    font-size: 15px;
-
-  }
-
-  .nav-brand{
-    padding:0;
-    margin: 0;
-  }
-
-  .info{
-    padding-left: 1px;
-    padding-top:5px
-  }
-
-  .linked-in-header{
-    margin-left: 50px;
-  }
-
-  .linkedin-icon{
-    margin-left: 15px;
-  }
-
-  .logo{
-    margin-top: 0;
-
-  }
-
-  .pad-1{
-    display: none;
-  }
-
   .carousel-item{
-    max-width: 80%;
+    max-width: 30%;
   }
 
+  .btn{
+    margin-top: 4px;
+  }
+}
 
+@media (max-width: 767px) {
+
+ .welcome{
+   display: none;
  }
 
- @media (max-width: 767px) {
-
-   .welcome{
-     display: none;
-   }
-
-   .carousel-item{
-     max-width: 60%;
-   }
-
-   .nav-link{
-     font-size: 20px;
-     color: #FFB6DA;
-     margin-right:10px;
-     margin-left: 1px;
-   }
-
-   .btn{
-     margin-top: 5px;
-
-   }
-
-   .github-icon{
-     margin-bottom: 1px;
-     padding-bottom: 0;
-   }
-
-   .linkedin-icon{
-     margin-bottom: 1px;
-     padding-bottom: 0;
-   }
-
-   .email-icon-header{
-     margin-bottom: 1px;
-     padding-bottom: 0;
-   }
-
+ .carousel-item{
+   max-width: 40%;
  }
 
- @media (max-width: 991px) {
+ .nav-link{
+   font-size: 80px;
+   color: #FFB6DA;
+   margin-right:10px;
+   margin-left: 1px;
+ }
 
-   .nav-link{
-     font-size: 20px;
-     color: #FFB6DA;
-     margin-right:20px;
-     margin-left: 1px;
-   }
+ .logo{
+   max-width: 60%;
+   margin-top: 50px;
+   align-self: center;
+ }
 
-   .welcome{
-     display: none;
-   }
+ .info {
+   margin-left: 15px;
+   margin-right: 15px;
+   font-size: 15px;
+   margin-bottom: 80px;
+   margin-top: 20px;
+ }
 
-   .carousel-item{
-     max-width: 80%;
-   }
+  .work-header{
+    margin-top: 80px;
+  }
 
-   #projects{
-     margin-right: 20px;
+  .work-info{
+    margin-bottom:50px;
+  }
 
-   }
+  #accordion{
+    margin-bottom: 80px;
+  }
 
-   #contact{
-     margin-right: 20px;
-   }
+  .card-header{
+    text-align: center;
+  }
 
-   #work{
-     margin-left: 20px;
-   }
+  .btn{
+    margin-top: 4px;
+  }
 
+}
 
+@media (max-width: 991px) {
 
+ .welcome{
+   display:none;
+ }
+
+ .logo{
+   max-width: 50%;
+   margin-top: 50px;
+   align-self: center;
+ }
+
+ .nav-link{
+   font-size: 40px;
+   color: #FFB6DA;
+   margin-right:20px;
+   margin-left: 1px;
+ }
+
+ .info {
+   margin-right: 20px;
+   margin-left: 10px;
+ }
+
+ .projects-header{
+   margin-top: 80px;
+ }
+
+ .work-header{
+   margin-top: 80px;
+ }
+
+ .contact-header{
+   margin-top: 80px;
+ }
+
+ .carousel-item{
+   max-width: 80%;
+ }
 
 }
 
 @media (max-width: 1199px) {
 
+  .logo{
+    max-width: 30%;
+    margin-top: 50px;
+    align-self: center;
+  }
+
   .nav-link{
-    font-size: 20px;
+    font-size: 80px;
     color: #FFB6DA;
     margin-right:20px;
     margin-left: 1px;
   }
 
-  #projects{
+  .projects-header{
+    margin-top: 80px;
+  }
+
+  .work-header{
+    margin-top: 80px;
+  }
+
+  .contact-header{
+    margin-top: 80px;
+  }
+
+  .info {
     margin-right: 20px;
-
-  }
-
-  #contact{
-    margin-right: 20px;
-  }
-
-  #work{
-    margin-left: 20px;
-  }
-
-  .git-hub-header{
     margin-left: 10px;
   }
 
-  .github-icon{
-    margin-left: 5px;
-  }
-
-  .linked-in-header{
-    margin-left: 10px;
-  }
-
-  .linkedin-icon{
-    margin-left: 5px;
-  }
-
-  .email-header{
-    margin-left: 10px;
-  }
-
-  .email-icon-header{
-    margin-left: 5px;
-  }
 }
-
-@media (min-width:992px){
-
-  .nav-link{
-    font-size: 20px;
-    color: #FFB6DA;
-    margin-right:20px;
-    margin-left: 1px;
-  }
-
-  .git-hub-header{
-    padding-left: 40px;
-
-  }
-
-  .github-icon{
-    padding-left: 5px;
-  }
-
-  .linked-in-header{
-    padding-left:40px;
-  }
-
-  .email-header{
-    padding-left: 40px;
-  }
-}
-
-
-
-
-
 
 html, body {
     max-width: 100%;
@@ -278,53 +206,48 @@ margin-top: 50px;
 padding-bottom: 50px;
 background-color: black;
 color:#FFF0F7;
-
-
 }
 
-
-
-hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 0;
-  border-top: 4px solid black;
+.navbar{
+  position:fixed;
+  width:100%;
 }
 
-.border-left {
-    border-left: 4px solid black;
-}
-.pad-1{
-  padding:0;
-}
-
-
-#projects{
-margin-top:50px;
-margin-bottom: 10px;
+.welcome{
+position: relative;
+top: 23%;
 font-family: 'Montserrat', sans-serif;
 font-size: 30px;
+font-style: thin;
 font-weight: lighter;
+color:#FFB6DA;
 
 }
 
-#work {
-  margin-top:60px;
-  margin-bottom: 10px;
+#projects{
+
+  margin-top: 40%;
   font-family: 'Montserrat', sans-serif;
+  font-size: lighter;
   font-size: 30px;
-  font-weight: lighter;
+}
+
+#work{
+  margin-top: 40%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: lighter;
+  font-size: 30px;
 }
 
 #contact{
-  margin-top:60px;
-  margin-bottom: 10px;
+  margin-top: 40%;
   font-family: 'Montserrat', sans-serif;
+  font-size: lighter;
   font-size: 30px;
-  font-weight: lighter;
 }
 
-#projects-h:hover, #contact-h:hover, #work-h:hover {
+
+#projects:hover, #contact:hover, #work:hover {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
@@ -350,43 +273,21 @@ font-weight: lighter;
   }
 }
 
-.navbar{
-  position:fixed;
-  width:100%;
-}
-
-
-// .asos{
-//   margin-top: 30px;
-//   margin-left: 5px;
-//   padding-top: 20px;
-//   // margin-bottom: 10px;
-//   height: 40px;
-//   width: 70px;
-//   border-style: none;
-// }
-
-// .asos-body{
-//   padding-top: 51px;
-// }
-
 .font-mfizz {
   font-size: 3em;
 }
 
-.fa-html5{
-   margin-top: 10px;
-   margin-bottom: 10px;
-   margin-left: 20px;
-  //  padding-bottom: 20px;
-   padding-top: 22px;
-   padding-bottom: 15px;
+.icon-html5-alt{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  padding-top: 20px;
 }
+
 .icon-ruby{
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 20px;
-  //  padding-bottom: 20px;
    padding-top: 20px;
 }
 
@@ -395,17 +296,6 @@ font-weight: lighter;
   margin-bottom: 10px;
   margin-left: 20px;
   padding-top: 20px;
-}
-
-.welcome{
-position: relative;
-top: 23%;
-font-family: 'Montserrat', sans-serif;
-font-size: 30px;
-font-style: thin;
-font-weight: lighter;
-color:#FFB6DA;
-
 }
 
 .card-body{
@@ -436,26 +326,14 @@ color:#FFB6DA;
 filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
-.projects {
-  text-align: right;
-}
-
-.contact{
-  text-align: right;
-}
-
 .logo{
-  width: 100% \9;
+  width: 100%;
   padding-top: 0px;
   margin-top: 0;
 }
 
-// .carousel-item{
-//   margin-bottom: 0
-// }
-
 .info{
-  margin-top: 20px;
+  margin-top: 50px;
   padding-left:4px;
   background-color: black;
   color: white;
@@ -469,6 +347,7 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
   font-weight: lighter;
+  color:#FFB6DA;
 }
 
 .scroll-adjust{
@@ -476,28 +355,18 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   margin-top: -52px;
 }
 
-
-.about{
-  background-color: black;
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-
+.work-info{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
 }
 
 .card{
   border-style: none;
   display: inline-block;
-
 }
 
 .bg-black{
   background-color: black;
-}
-
-.work-history{
-  color: black;
 }
 
 .btn{
@@ -510,7 +379,6 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 .btn:hover{
   color:#FFB6DA;
 }
-
 
 .btn:after,
 .btn:before {
@@ -539,27 +407,13 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   width: 70%;
 }
 
-.email-pic{
-  width:100%;
-}
-
 .bg-grey{
   background-color: #7F787B
 }
 
-
-
 .fa-reply-all{
   padding-right: 15px;
 }
-
-// .fa-mouse-pointer{
-//   padding-right: 15px;
-// }
-//
-// .fa-search{
-//   padding-right: 15px;
-// }
 
 .bg-grey-2{
   background-color: #7E7E7E;
@@ -572,15 +426,20 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   padding-bottom: 2px;
 }
 
+.work-about{
+  padding-top:2px;
+  padding-left:2px;
+  padding-left: 2px;
+  padding-bottom: 2px;
+}
+
 .card-header {
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
-
 }
 
 .tab-head{
   color: #FFB6DA;
-
 }
 
 
@@ -588,12 +447,3 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   text-decoration: none;
   color: white;
 }
-
-.animated {
-
-
-}
-
-// .card-html{
-//   height: 202px;
-// }
