--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -27,8 +27,8 @@
   </ul>
 </nav> -->
 
-<nav id="home-navbar" class="d-flex justify-content-center sticky-top navbar nav shift bg-black">
-  <!-- <a class="navbar-brand" href="/">HOME</a> -->
+<nav id="home-navbar" class="d-flex justify-content-center sticky-top navbar nav bg-black">
+  
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link" href="/">HOME</a>
