--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div> <!--carousel end -->
 
-  
+
     <div class="col-lg-1 bg-black">
         <p class="welcome rotate">WELCOME</p>
     </div><!--welcome end -->
@@ -129,7 +129,7 @@
               delivery of client campaigns which included html for Nissan.</p>
             </div>
           </div>
-        </div><
+        </div>
       </div><!--end of accordion-->
     </div> <!--end of work row-->
   </div> <!--work history end container-->
