--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -166,6 +166,7 @@
       </div>
 
     </div><!--end of row-->
+    <a href="/pages/sitemap"><p class="sitemap">sitemap</p></a>
   </div><!--end of container-->
 
 </div> <!--scroll end-->
