--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,6 +1,5 @@
-
-
 <%= render 'layouts/nav' %>
+
 
 <div class="row"> <!--row1 start-->
   <div class="pad-1 col-sm-12 col-lg-5"> <!--carousel begin-->
@@ -19,32 +18,19 @@
     </div>
   </div> <!--carousel end -->
 
+  <div class="col-lg-1 bg-black">
+      <p class="welcome rotate">WELCOME</p>
+  </div><!--welcome end -->
 
-    <div class="col-lg-1 bg-black">
-        <p class="welcome rotate">WELCOME</p>
-    </div><!--welcome end -->
-
-
-
-    <div class="about col-sm-12 col-lg-6">
-      <%= image_tag("sophielogo.svg", :alt => "logo", :class =>"d-block w-100 logo img-fluid mx-auto d-block" ) %>
-      <p class="info">
-
-        Hi I'm Sophie and I'm an aspiring web developer.
-
-        I have a background in digital marketing but I've always had a passion for tech
-        and problem solving.
-
-        I might be small in stature but I'm big on fun.
-
-        If the programming has taught me anything is that
-        "curiousity killed the cat but satisfaction brought it back". 
-      </p>
-    </div>
-
-<!--about me end-->
-
-
+  <div class="about col-sm-12 col-lg-6">
+    <%= image_tag("sophielogo.svg", :alt => "logo", :class =>"d-block w-100 logo img-fluid mx-auto d-block" ) %>
+    <p class="info">
+      I’m an INFJ ex marketer who dove head first into a new challenge.
+      I think a lot, squint a lot but overall I get the job done with my eye for detail.
+      Give me a problem I will solve it by all means necessary because I care about what
+      I do as a representation of me.
+    </p>
+  </div><!--about me end-->
 
 </div> <!--end of row1-->
 
@@ -173,7 +159,7 @@
       </div>
 
     </div><!--end of row-->
-    <a href="/pages/sitemap"><p class="sitemap">sitemap</p></a>
+    <a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
   </div><!--end of container-->
 
 </div> <!--scroll end-->
