--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="row"> <!--row1 start-->
-  <div class="pad-1 col-sm-12 col-lg-5"> <!--carousel begin-->
+  <div class="col-sm-12 col-lg-5"> <!--carousel begin-->
     <div id="carousel-me" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner d-flex justify-content-center">
         <div class="carousel-item active">
