updated readme and pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -241,9 +241,8 @@ color:#FFB6DA;
 }
 
 .welcome:not(:root:root){
-
-  top:20%;
-
+position: relative;
+top: 20px;
 }
 
 
@@ -271,7 +270,7 @@ color:#FFB6DA;
 }
 
 
-#projects:hover, #projects:focus, #contact:hover, #contact:focus,  #work:hover, #work:focus {
+#projects:hover, #contact:hover, #work:hover {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
