--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -25,10 +25,10 @@
   <div class="about col-sm-12 col-lg-6">
     <%= image_tag("sophielogo.svg", :alt => "logo", :class =>"d-block w-100 logo img-fluid mx-auto d-block" ) %>
     <p class="info">
-      I’m an INFJ ex marketer who dove head first into a new challenge.
-      I think a lot, squint a lot but overall I get the job done with my eye for detail.
-      Give me a problem I will solve it by all means necessary because I care about what
-      I do as a representation of me.
+     Hi I'm Sophie and I'm aspiring web developer. I have a background in marketing but I've always had a passion for tech
+     and trouble shooting.
+     I might be small in stature but I'm big on fun.
+     If programming has taught me anything it's that "curiousity killed the cat but satisfaction brought it back".
     </p>
   </div><!--about me end-->
 
@@ -155,7 +155,7 @@
         <div class="linkedin-icon">
           <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
         </div>
-        <a href="https://www.linkedin.com/in/sophie-chhoeu-58a96670/" class="btn" target="_blank">link me</a>
+        <a href="https://www.linkedin.com/in/sophie-chhoeu-58a96670/" class="btn" target="_blank">Link me</a>
       </div>
 
     </div><!--end of row-->
