created 3 pages, updated sitemap, cleaned html

--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,1 +1,35 @@
-<h1 class="info">hi</h1>
+<%= render 'layouts/nav' %>
+
+<div class="work-container">
+ <p class="neon"><a class="neon-head">WORK</a></p>
+  <div class="row">
+   <div class="col-sm-12 col-lg-6 ">
+     <p class="work-info">I've been working in Marketing for the last five years and have completed a Bachelor degree in Business. My primary marketing roles involved building business relationships
+     and trouble shooting. As a result my passion for tech grew and it all started from Email
+     and Lead Generation marketing.</p>
+   </div><!--end of work history blurb-->
+
+
+  <div class="col-sm-12 col-lg-6">
+   <div class="card lead-card" id="accordion" role="tablist" aria-multiselectable="true">
+     <div class="card-header bg-grey" role="tab" id="lead-gen">
+       <h5 class="mb-0">
+         <i class="fa fa-reply-all fa-1x" aria-hidden="true"></i>
+         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="tab-head">
+         Lead Generation and Email</a>
+       </h5>
+     </div>
+
+   <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+     <div class="card-block bg-grey-2">
+       <p class="work-about">I worked for lead generation and email company called 3di. Lead generation is the initiation of consumer
+       interest or enquiry into products or services of a business. I was publisher operations manager where I managed
+       delivery of client campaigns which included html for Nissan.</p>
+     </div>
+   </div>
+  </div>
+ </div><!--end of accordion-->
+</div><!--END OF WORK ROW-->
+
+<a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
+</div><!--END OF WORK CONTAINER-->
