--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,9 +119,9 @@ nav ul li a:hover {
     margin-top: 80px;
   }
 
-  .work-info{
-    margin-bottom:50px;
-  }
+  // .work-info{
+  //   margin-bottom:50px;
+  // }
 
   #accordion{
     margin-bottom: 80px;
@@ -129,6 +129,13 @@ nav ul li a:hover {
 
   .card-header{
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-style: thin;
+  }
+
+  .card-title{
+    font-family: 'Montserrat', sans-serif;
+    font-style: thin;
   }
 
   .btn{
@@ -215,6 +222,7 @@ nav ul li a:hover {
 
 html, body {
   max-width: 100%;
+  height:100%;
   overflow-x: hidden;
 }
 
@@ -224,6 +232,55 @@ padding-bottom: 50px;
 background-color: black;
 color:#FFF0F7;
 }
+
+.projects-container .contact-container .work-container{
+  width: 100%;
+  margin-left:15%;
+  margin-right: 15%;
+  margin-top: 15%;
+  margin-bottom: 15%;
+
+}
+
+.neon {
+  text-align: center;
+  font-size: 5em;
+  margin: 20px 0 20px 0;
+}
+
+.neon-head {
+  text-decoration: none;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.neon:nth-child(1) .neon-head{
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  font-style: thin;
+
+  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
+  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
+  animation: neon1 1.5s ease-in-out infinite alternate;
+}
+
+.neon:nth-child(1):hover .neon-head:hover {
+  color: #FFB6DA;
+  -webkit-animation: none;
+  -moz-animation: none;
+  animation: none;
+}
+
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
 
 .navbar{
   position:fixed;
@@ -373,14 +430,10 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   color:#FFB6DA;
 }
 
-.scroll-adjust{
-  padding-top: 52px;
-  margin-top: -52px;
-}
-
 .work-info{
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
+  margin: 1rem 1rem 1rem 1rem;
 }
 
 .card{
@@ -431,7 +484,11 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
 .bg-grey{
-  background-color: #7F787B
+  background-color: #7F787B;
+}
+
+.bg-pink{
+  background-color: #FFB6DA;
 }
 
 .fa-reply-all{
