--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,47 +1,17 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="/">Home</a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="/pages/projects">Projects <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/pages/contact">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav> -->
-<!--
-<nav id="navbar-example2" class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">Home</a>
-  <ul class="nav nav-pills">
-    <li class="nav-item">
-      <a class="nav-link" href="/pages/projects">Projects</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/pages/contact">Contact</a>
-    </li>
-  </ul>
-</nav> -->
-
 <nav id="home-navbar" class="d-flex justify-content-center sticky-top navbar nav bg-black">
-
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link" href="/">HOME</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#projects">PROJECTS</a>
+      <a class="nav-link" href="/pages/projects">PROJECTS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#work">WORK HISTORY</a>
+      <a class="nav-link" href="/pages/work">WORK HISTORY</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#contact">CONTACT</a>
+      <a class="nav-link" href="/pages/contact">CONTACT</a>
     </li>
   </ul>
-</nav>
+</nav><!--end of nav-->
