--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,43 +1,50 @@
-<!-- <nav id="navbar-example2" class="sticky-top navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">Navbar</a>
-  <ul class="nav nav-pills">
-    <li class="nav-item">
-      <a class="nav-link" href="#fat">@fat</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#mdo">@mdo</a>
-    </li>
-  </ul>
-</nav>
-<div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-  <h4 id="fat">projects</h4>
-  <div class="row">
-    <div class="col-3">
-      <img src="..." alt="..." class="img-thumbnail">
-    </div>
-    <div class="col-3">
-      <img src="..." alt="..." class="img-thumbnail">
-    </div>
-    <div class="col-3">
-      <img src="..." alt="..." class="img-thumbnail">
-    </div>
-    <div class="col-3">
-      <img src="..." alt="..." class="img-thumbnail">
-    </div>
-  </div>
+<%= render 'layouts/nav' %>
+
+<div class="projects-container">
+    <p class="neon"><a class="neon-head">PROJECTS</a></p>
+
+    <div class="row">
+      <div class="card bg-black d-flex justify-content-around col-sm-12 col-md-4">
+        <div class="card-img-top img-fluid font-mfizz"><!--ruby logo-->
+          <div class="icon-html5-alt"></div>
+        </div>
+
+        <div class="card-body">
+          <h5 class="card-title">HTML</h5>
+          <p class="card-text">I built a html and css wireframe based on the asos website.</p>
+          <a href="https://github.com/sophiechhoeu/wireframe" class="btn" target="_blank">Check it out</a>
+        </div>
+      </div><!--end of html card-->
 
 
-  <h4 id="mdo">@mdo</h4>
-  <p>...</p>
-  <p>...</p>
-  <p>...</p>
-  <p>...</p>
-  <h4 id="one">one</h4>
-  <p>...</p>
-  <h4 id="two">two</h4>
-  <p>...</p>
-  <h4 id="three">three</h4>
-  <p>...</p>
-</div> -->
+        <!--ruby card-->
+    <div class="card bg-black d-flex justify-content-around col-sm-12 col-md-4">
+      <div class="card-img-top img-fluid font-mfizz"><!--ruby logo-->
+        <div class="icon-ruby"></div>
+      </div>
 
-<h1 class="info">hi</h1>
+      <div class="card-body">
+          <h5 class="card-title">Ruby</h5>
+          <p class="card-text">Ruby examples including a holiday package generator.</p>
+          <a href="https://github.com/sophiechhoeu/rubyexamples" class="btn" target="_blank">Find it here</a>
+      </div>
+    </div><!--end of ruby card -->
+
+
+        <!--rails card-->
+    <div class="card bg-black d-flex justify-content-around col-12 col-md-4">
+      <div class="card-img-top img-fluid font-mfizz">
+        <div class="icon-ruby-on-rails-alt"> <!--rails logo-->
+        </div>
+      </div>
+
+      <div class="card-body">
+        <h5 class="card-title">Ruby on Rails</h5>
+        <p class="card-text">I created a ruby on rails project for the amaysim website.</p>
+        <a href="https://github.com/sophiechhoeu/amaysim" class="btn" target="_blank">Take a peek</a>
+      </div>
+    </div>
+
+    </div> <!--end of projects row-->
+  <a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
+</div><!--end of projects container-->
