--- a/app/views/pages/sitemap.html.erb
+++ b/app/views/pages/sitemap.html.erb
@@ -1,3 +1,6 @@
 <div class="site-map">
-  <a href="/" class="sitemap">homepage</a>
-</div>
+  <a href="/" class="sitemap">homepage</a><br>
+  <a href="/pages/projects" class="sitemap">projects</a><br>
+  <a href="/pages/work" class="sitemap">work</a><br>
+  <a href="/pages/contact" class="sitemap">contact</a><br>
+</div><!--end of site map-->
