updated css and responsiveness for contact and work

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,10 +4,10 @@
   <p class="neon"><a class="neon-head">CONTACT</a></p>
   <div class="row">
     <div class="card bg-black d-flex justify-content-around col-sm-12 col-md-4">
-      <div class="card-header">
+      <div class="contact-card-header">
         <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
       </div>
-      <div class="card-block">
+      <div class="contact-card-block">
         <h4 class="card-title">Feel free to get in touch</h4>
         <p class="card-text">I have lots of emails even my first email address and it's embarassingly good.</p>
         <a href="mailto:sophie.chhoeu@gmail.com" class="btn">Email me</a>
@@ -15,10 +15,10 @@
     </div><!--end of email card-->
 
   <div class="card bg-black d-flex justify-content-around col-sm-12 col-md-4">
-    <div class="card-header">
+    <div class="contact-card-header">
       <i class="fa fa-github fa-2x" aria-hidden="true"></i>
     </div>
-    <div class="card-block">
+    <div class="contact-card-block">
       <h4 class="card-title">Feel free to follow me</h4>
       <p class="card-text">I'll definitely follow you back because I love reading creative readme files.</p>
       <a href="https://github.com/sophiechhoeu" target="_blank" class="btn">Email me</a>
@@ -26,10 +26,10 @@
   </div><!--end of git hub card-->
 
   <div class="card bg-black git-card d-flex justify-content-around col-sm-12 col-md-4">
-    <div class="card-header">
+    <div class="contact-card-header">
       <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
     </div>
-    <div class="card-block">
+    <div class="contact-card-block">
       <h4 class="card-title">Feel to send me an invite</h4>
       <p class="card-text">I love meeting new people and building community connections from everywhere!</p>
       <a href="https://www.linkedin.com/in/sophie-chhoeu-58a96670/" target="_blank" class="btn">Link me</a>
