--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,31 @@ nav ul li a:hover {
 .site-map{
   text-align: center;
 }
+//
+// @media (min-width: 533px){
+//
+// .welcome {
+//   display: none;
+// }
+//
+// .logo{
+//   max-width:50%;
+//   align-self:center;
+//   margin-top:40px;
+// }
+//
+// .neon-head{
+//   max-width:50%;
+//   margin-top:40px;
+//   margin-left: 5px;
+//   margin-right: 5px;
+// }
+//
+//
+//
+//
+//
+// }
 
 @media (max-width: 575px) {
   .welcome {
@@ -59,21 +84,21 @@ nav ul li a:hover {
     margin-bottom: 20px;
   }
 
-  .projects-header{
-    margin-top: 20px;
-  }
+  // .projects-header{
+  //   margin-top: 20px;
+  // }
+  //
+  // .work-header{
+  //   margin-top: 20px;
+  // }
+  //
+  // .contact-header{
+  //   margin-top: 20px;
+  // }
 
-  .work-header{
-    margin-top: 20px;
-  }
-
-  .contact-header{
-    margin-top: 20px;
-  }
-
-  #accordion{
-    text-align: center;
-  }
+  // #accordion{
+  //   text-align: center;
+  // }
 
   .carousel-item{
     max-width: 30%;
@@ -119,16 +144,12 @@ nav ul li a:hover {
     margin-top: 80px;
   }
 
-  // .work-info{
-  //   margin-bottom:50px;
-  // }
-
   #accordion{
     margin-bottom: 80px;
   }
 
   .card-header{
-    text-align: center;
+    text-align: left;
     font-family: 'Montserrat', sans-serif;
     font-style: thin;
   }
@@ -141,8 +162,9 @@ nav ul li a:hover {
   .btn{
     margin-top: 4px;
   }
-
 }
+
+
 
 @media (max-width: 991px) {
 
@@ -168,17 +190,17 @@ nav ul li a:hover {
    margin-left: 10px;
  }
 
- .projects-header{
-   margin-top: 80px;
- }
-
- .work-header{
-   margin-top: 80px;
- }
-
- .contact-header{
-   margin-top: 80px;
- }
+ // .projects-header{
+ //   margin-top: 80px;
+ // }
+ //
+ // .work-header{
+ //   margin-top: 80px;
+ // }
+ //
+ // .contact-header{
+ //   margin-top: 80px;
+ // }
 
  .carousel-item{
    max-width: 80%;
@@ -201,17 +223,7 @@ nav ul li a:hover {
     margin-left: 1px;
   }
 
-  .projects-header{
-    margin-top: 80px;
-  }
-
-  .work-header{
-    margin-top: 80px;
-  }
-
-  .contact-header{
-    margin-top: 80px;
-  }
+cf
 
   .info {
     margin-right: 20px;
@@ -233,18 +245,42 @@ background-color: black;
 color:#FFF0F7;
 }
 
-.projects-container .contact-container .work-container{
+.projects-container{
   width: 100%;
-  margin-left:15%;
-  margin-right: 15%;
-  margin-top: 15%;
-  margin-bottom: 15%;
+  margin-left:5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px
+}
 
+.contact-container{
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 4px;
+  padding-bottom:4px;
+}
+
+.work-container{
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-bottom: 40px;
+  margin-bottom: 30px;
+}
+
+.work-i{
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+}
+
+.card-block{
+  padding-left: 4px;
+  padding-right:2px;
+  padding-top: 2px;
 }
 
 .neon {
   text-align: center;
-  font-size: 5em;
+  font-size: 4em;
   margin: 20px 0 20px 0;
 }
 
@@ -327,31 +363,31 @@ top: 20px;
 }
 
 
-#projects:hover, #contact:hover, #work:hover {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
-}
-
-@keyframes shake {
-
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
-}
+// #projects:hover, #contact:hover, #work:hover {
+//   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+//   transform: translate3d(0, 0, 0);
+//   backface-visibility: hidden;
+//   perspective: 1000px;
+// }
+//
+// @keyframes shake {
+//
+//   10%, 90% {
+//     transform: translate3d(-1px, 0, 0);
+//   }
+//
+//   20%, 80% {
+//     transform: translate3d(2px, 0, 0);
+//   }
+//
+//   30%, 50%, 70% {
+//     transform: translate3d(-4px, 0, 0);
+//   }
+//
+//   40%, 60% {
+//     transform: translate3d(4px, 0, 0);
+//   }
+// }
 
 .font-mfizz {
   font-size: 3em;
@@ -433,7 +469,7 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 .work-info{
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 0 0 0 0;
 }
 
 .card{
@@ -499,19 +535,25 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   background-color: #7E7E7E;
 }
 
-.card-block{
-  padding-top: 2px;
-  padding-left: 6px;
-  padding-right: 2px;
-  padding-bottom: 2px;
+.contact-card-header{
+  text-align: left;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
-.work-about{
-  padding-top:2px;
-  padding-left:2px;
-  padding-left: 2px;
-  padding-bottom: 2px;
+
+
+.contact-card-block{
+  padding-top: 2px;
+  padding-left: 5px;
+  padding-right: 2px;
+  padding-bottom: 0px;
+  margin-left: 8px;
+  margin-right:2px;
+  margin-bottom: 0px;
 }
+
+
 
 .card-header {
   font-family: 'Montserrat', sans-serif;
