cleaned css and html and added heroku link to readme

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <nav id="home-navbar" class="d-flex justify-content-center sticky-top navbar nav bg-black">
-  <ul class="nav">
+  <ul class="nav font">
     <li class="nav-item">
       <a class="nav-link" href="/">HOME</a>
     </li>
