--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -24,7 +24,7 @@
 
     <div class="about col-sm-12 col-lg-6">
       <%= image_tag("sophielogo.svg", :alt => "logo", :class =>"d-block w-100 logo img-fluid mx-auto d-block" ) %>
-      <p class="info">
+      <p class="info font">
        Hi I'm Sophie and I'm aspiring web developer. I have a background in marketing but I've always had a passion for tech
        and trouble shooting.
        I might be small in stature but I'm big on fun.
@@ -32,5 +32,5 @@
       </p>
     </div><!--about me end-->
   </div> <!--end of row1-->
-  <a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
+  <a href="/pages/sitemap" ><p class="sitemap font">sitemap</p></a>
 </div><!--end of container-->
