--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -11,7 +11,7 @@
 
         <div class="card-body">
           <h5 class="card-title">HTML</h5>
-          <p class="card-text">I built a html and css wireframe based on the asos website.</p>
+          <p class="card-text font">I built a html and css wireframe based on the asos website.</p>
           <a href="https://github.com/sophiechhoeu/wireframe" class="btn" target="_blank">Check it out</a>
         </div>
       </div><!--end of html card-->
@@ -25,7 +25,7 @@
 
       <div class="card-body">
           <h5 class="card-title">Ruby</h5>
-          <p class="card-text">Ruby examples including a holiday package generator.</p>
+          <p class="card-text font">Ruby examples including a holiday package generator.</p>
           <a href="https://github.com/sophiechhoeu/rubyexamples" class="btn" target="_blank">Find it here</a>
       </div>
     </div><!--end of ruby card -->
@@ -40,11 +40,11 @@
 
       <div class="card-body">
         <h5 class="card-title">Ruby on Rails</h5>
-        <p class="card-text">I created a ruby on rails project for the amaysim website.</p>
+        <p class="card-text font">I created a ruby on rails project for the amaysim website.</p>
         <a href="https://github.com/sophiechhoeu/amaysim" class="btn" target="_blank">Take a peek</a>
       </div>
     </div>
 
     </div> <!--end of projects row-->
-  <a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
+  <a href="/pages/sitemap" ><p class="sitemap font">sitemap</p></a>
 </div><!--end of projects container-->
