--- a/app/views/pages/sitemap.html.erb
+++ b/app/views/pages/sitemap.html.erb
@@ -1,4 +1,4 @@
-<div class="site-map">
+<div class="site-map font">
   <a href="/" class="sitemap">homepage</a><br>
   <a href="/pages/projects" class="sitemap">projects</a><br>
   <a href="/pages/work" class="sitemap">work</a><br>
