--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,31 +36,6 @@ nav ul li a:hover {
 .site-map{
   text-align: center;
 }
-//
-// @media (min-width: 533px){
-//
-// .welcome {
-//   display: none;
-// }
-//
-// .logo{
-//   max-width:50%;
-//   align-self:center;
-//   margin-top:40px;
-// }
-//
-// .neon-head{
-//   max-width:50%;
-//   margin-top:40px;
-//   margin-left: 5px;
-//   margin-right: 5px;
-// }
-//
-//
-//
-//
-//
-// }
 
 @media (max-width: 575px) {
   .welcome {
@@ -80,37 +55,17 @@ nav ul li a:hover {
     margin-bottom: 20px;
   }
 
-.nav-link{
-}
-  // .nav-link{
-  //   font-size: 80px;
-  //   color: #FFB6DA;
-  //   margin-right:1px;
-  //   margin-left: 1px;
-  // }
-
-  // .projects-header{
-  //   margin-top: 20px;
-  // }
-  //
-  // .work-header{
-  //   margin-top: 20px;
-  // }
-  //
-  // .contact-header{
-  //   margin-top: 20px;
-  // }
-
-  // #accordion{
-  //   text-align: center;
-  // }
-
   .carousel-item{
     max-width: 30%;
   }
 
   .btn{
     margin-top: 4px;
+    margin-bottom: 8px;
+  }
+
+  .get-in-touch{
+    margin-top: 8px;
   }
 }
 
@@ -127,8 +82,6 @@ nav ul li a:hover {
  .nav-link{
    font-size: 80px;
    color: #FFB6DA;
-   margin-right:10px;
-   margin-left: 1px;
  }
 
  .logo{
@@ -145,31 +98,15 @@ nav ul li a:hover {
    margin-top: 20px;
  }
 
-  .work-header{
-    margin-top: 80px;
-  }
+ .get-in-touch{
+   margin-top: 10px;
+ }
 
-  #accordion{
-    margin-bottom: 80px;
-  }
-
-  .card-header{
-    text-align: left;
-    font-family: 'Montserrat', sans-serif;
-    font-style: thin;
-  }
-
-  .card-title{
-    font-family: 'Montserrat', sans-serif;
-    font-style: thin;
-  }
-
-  .btn{
-    margin-top: 4px;
-  }
+ .btn{
+   margin-top: 5px;
+   margin-bottom: 10px;
+ }
 }
-
-
 
 @media (max-width: 991px) {
 
@@ -183,29 +120,14 @@ nav ul li a:hover {
    align-self: center;
  }
 
- .nav-link{
-   font-size: 40px;
-   color: #FFB6DA;
-   margin-right:20px;
-   margin-left: 1px;
- }
-
  .info {
    margin-right: 20px;
    margin-left: 10px;
  }
 
- // .projects-header{
- //   margin-top: 80px;
- // }
- //
- // .work-header{
- //   margin-top: 80px;
- // }
- //
- // .contact-header{
- //   margin-top: 80px;
- // }
+ .lead-card{
+   margin-top: 50px;
+ }
 
  .carousel-item{
    max-width: 80%;
@@ -221,18 +143,13 @@ nav ul li a:hover {
     align-self: center;
   }
 
-  .nav-link{
-    font-size: 80px;
-    color: #FFB6DA;
-    margin-right:20px;
-    margin-left: 1px;
-  }
-
-cf
-
   .info {
     margin-right: 20px;
     margin-left: 10px;
+  }
+
+  .get-in-touch{
+    margin-top: 20px;
   }
 
 }
@@ -272,11 +189,6 @@ color:#FFF0F7;
   margin-bottom: 30px;
 }
 
-.work-i{
-  padding-bottom: 30px;
-  margin-bottom: 20px;
-}
-
 .card-block{
   padding-left: 4px;
   padding-right:2px;
@@ -290,6 +202,7 @@ color:#FFF0F7;
 }
 
 .neon-head {
+  font-size: 30px;
   text-decoration: none;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -322,7 +235,6 @@ color:#FFF0F7;
   }
 }
 
-
 .navbar{
   position:fixed;
   width:100%;
@@ -342,57 +254,6 @@ color:#FFB6DA;
 position: relative;
 top: 20px;
 }
-
-
-
-#projects{
-
-  margin-top: 40%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: lighter;
-  font-size: 30px;
-}
-
-#work{
-  margin-top: 40%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: lighter;
-  font-size: 30px;
-}
-
-#contact{
-  margin-top: 40%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: lighter;
-  font-size: 30px;
-}
-
-
-// #projects:hover, #contact:hover, #work:hover {
-//   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-//   transform: translate3d(0, 0, 0);
-//   backface-visibility: hidden;
-//   perspective: 1000px;
-// }
-//
-// @keyframes shake {
-//
-//   10%, 90% {
-//     transform: translate3d(-1px, 0, 0);
-//   }
-//
-//   20%, 80% {
-//     transform: translate3d(2px, 0, 0);
-//   }
-//
-//   30%, 50%, 70% {
-//     transform: translate3d(-4px, 0, 0);
-//   }
-//
-//   40%, 60% {
-//     transform: translate3d(4px, 0, 0);
-//   }
-// }
 
 .font-mfizz {
   font-size: 3em;
@@ -419,10 +280,12 @@ top: 20px;
   padding-top: 20px;
 }
 
-.card-body{
+.font{
   font-family: 'Montserrat', sans-serif;
   font-style: thin;
   font-weight: lighter;
+  font-size: 15px;
+
 }
 
 .col-1{
@@ -458,10 +321,6 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   padding-left:4px;
   background-color: black;
   color: white;
-  font-family:'Montserrat', sans-serif;
-  font-size: 15px;
-  font-weight: lighter;
-
 }
 
 .nav-link{
@@ -473,8 +332,6 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
 .work-info{
-  font-family: 'Montserrat', sans-serif;
-  font-weight: lighter;
   margin: 0 0 0 0;
 }
 
@@ -533,10 +390,6 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   background-color: #FFB6DA;
 }
 
-.fa-reply-all{
-  padding-right: 15px;
-}
-
 .bg-grey-2{
   background-color: #7E7E7E;
 }
@@ -546,8 +399,6 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   margin-left: 15px;
   margin-top: 15px;
 }
-
-
 
 .contact-card-block{
   padding-top: 2px;
@@ -559,19 +410,15 @@ filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
   margin-bottom: 0px;
 }
 
-
-
-.card-header {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: lighter;
-}
-
 .tab-head{
   color: #FFB6DA;
 }
 
-
 .tab-head:hover{
   text-decoration: none;
   color: white;
+}
+
+.get-in-touch{
+  margin-top: 25px;
 }
