--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -4,8 +4,8 @@
 <div class="work-container">
   <p class="neon"><a class="neon-head">WORK</a></p>
    <div class="row">
-    <div class="work-i col-sm-12 col-lg-6 ">
-      <p class="work-info">I've been working in Marketing for the last five years and have completed a Bachelor degree in Business. My primary marketing roles involved building business relationships
+    <div class="col-sm-12 col-lg-6 ">
+      <p class="work-info font">I've been working in Marketing for the last five years and have completed a Bachelor degree in Business. My primary marketing roles involved building business relationships
       and trouble shooting. As a result my passion for tech grew and it all started from Email
       and Lead Generation marketing.</p>
     </div><!--end of work history blurb-->
@@ -16,14 +16,14 @@
       <div class="card-header bg-grey" role="tab" id="lead-gen">
         <h5 class="mb-0">
           <i class="fa fa-reply-all fa-1x" aria-hidden="true"></i>
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="tab-head">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="tab-head font">
           Lead Generation and Email</a>
         </h5>
       </div>
 
     <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
       <div class="card-block bg-grey-2">
-        <p class="work-info">I worked for lead generation and email company called 3di. Lead generation is the initiation of consumer
+        <p class="work-info font">I worked for lead generation and email company called 3di. Lead generation is the initiation of consumer
           interest or enquiry into products or services of a business. I was publisher operations manager where I managed
           delivery of client campaigns which included html for Nissan.</p>
       </div>
@@ -32,5 +32,5 @@
   </div><!--end of accordion-->
  </div><!--END OF WORK ROW-->
 
- <a href="/pages/sitemap" ><p class="sitemap">sitemap</p></a>
-</div><!--END OF WORK CONTAINER--><!--END OF WORK Container
+ <a href="/pages/sitemap" ><p class="sitemap font">sitemap</p></a>
+</div><!--END OF WORK CONTAINER-->
