--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -21,7 +21,7 @@
     <div class="contact-card-block">
       <h4 class="card-title get-in-touch">Feel free to follow me</h4>
       <p class="card-text font">I'll definitely follow you back because I love reading creative readme files.</p>
-      <a href="https://github.com/sophiechhoeu" target="_blank" class="btn">Email me</a>
+      <a href="https://github.com/sophiechhoeu" target="_blank" class="btn">Contact me</a>
     </div>
   </div><!--end of git hub card-->
 
