--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -30,7 +30,7 @@
         <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
       </div>
         <div class="contact-card-block">
-          <h4 class="card-title get-in-touch">Feel to send me an invite</h4>
+          <h4 class="card-title get-in-touch">Feel free to send me an invite</h4>
           <p class="card-text font">I love meeting new people and building community connections from everywhere!</p>
           <a href="https://www.linkedin.com/in/sophie-chhoeu-58a96670/" target="_blank" class="btn">Link me</a>
         </div>
